apps/sm-18-apr-repo-test-02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-18-apr-repo-test-02
  labels:
    backstage.io/kubernetes-id: sm-18-apr-repo-test-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-18-apr-repo-test-02
  template:
    metadata:
      labels:
        app: sm-18-apr-repo-test-02
        backstage.io/kubernetes-id: sm-18-apr-repo-test-02
    spec:
      containers:
        - name: sm-18-apr-repo-test-02
          image: sureshmavp1/sm-18-apr-repo-test-02:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
