apps/sm-18-apr-repo-test-02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-18-apr-repo-test-02
spec:
  selector:
    app: sm-18-apr-repo-test-02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sm-18-apr-repo-test-02-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: sm-18-apr-repo-test-02.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: sm-18-apr-repo-test-02
#             port:
#               number: 80
